After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 651827 - Crash in check_application()
Crash in check_application()
Status: RESOLVED FIXED
Product: gtk+
Classification: Platform
Component: Widget: GtkAppChooser
3.0.x
Other Linux
: Normal critical
: ---
Assigned To: gtk-bugs
Cosimo Cecchi
Depends on:
Blocks:
 
 
Reported: 2011-06-03 23:45 UTC by Cosimo Cecchi
Modified: 2011-08-29 02:47 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
GtkAppChooser: Deal with 'no app found' gracefully (1.71 KB, patch)
2011-08-29 02:47 UTC, Matthias Clasen
committed Details | Review

Description Cosimo Cecchi 2011-06-03 23:45:40 UTC
Forwarded from downstream Fedora report: https://bugzilla.redhat.com/show_bug.cgi?id=698922

"Package: nautilus-3.0.1.1-1.fc15
Architecture: x86_64
OS Release: Fedora release 15 (Lovelock)


Comment
-----
in nautilus select application to open grub.conf"


Thread 1 (Thread 0x7eff43e709c0 (LWP 3994))

  • #0 check_application
    at gtkappchooserdialog.c line 229
  • #1 gtk_app_chooser_dialog_get_app_info
    at gtkappchooserdialog.c line 577
  • #2 add_or_find_application
    at gtkappchooserdialog.c line 259
  • #3 gtk_app_chooser_dialog_response
    at gtkappchooserdialog.c line 280
  • #4 gtk_app_chooser_dialog_response
    at gtkappchooserdialog.c line 271
  • #5 g_closure_invoke
    at gclosure.c line 767
  • #6 signal_emit_unlocked_R
    at gsignal.c line 3252
  • #7 g_signal_emit_valist
    at gsignal.c line 2983
  • #8 g_signal_emit
    at gsignal.c line 3040
  • #9 g_closure_invoke
    at gclosure.c line 767
  • #10 signal_emit_unlocked_R
    at gsignal.c line 3252
  • #11 g_signal_emit_valist
    at gsignal.c line 2983
  • #12 g_signal_emit
    at gsignal.c line 3040
  • #13 gtk_real_button_released
    at gtkbutton.c line 1827
  • #14 g_closure_invoke
    at gclosure.c line 767
  • #15 signal_emit_unlocked_R
    at gsignal.c line 3182
  • #16 g_signal_emit_valist
    at gsignal.c line 2983
  • #17 g_signal_emit
    at gsignal.c line 3040
  • #18 gtk_button_button_release
    at gtkbutton.c line 1719
  • #19 _gtk_marshal_BOOLEAN__BOXED
    at gtkmarshalers.c line 85
  • #20 g_closure_invoke
    at gclosure.c line 767
  • #21 signal_emit_unlocked_R
    at gsignal.c line 3290
  • #22 g_signal_emit_valist
    at gsignal.c line 2993
  • #23 g_signal_emit
    at gsignal.c line 3040
  • #24 gtk_widget_event_internal
    at gtkwidget.c line 6098
  • #25 gtk_propagate_event
    at gtkmain.c line 2597
  • #26 gtk_main_do_event
    at gtkmain.c line 1872
  • #27 gdk_event_source_dispatch
    at gdkeventsource.c line 318
  • #28 g_main_dispatch
    at gmain.c line 2440
  • #29 g_main_context_dispatch
    at gmain.c line 3013
  • #30 g_main_context_iterate
    at gmain.c line 3091
  • #31 g_main_loop_run
    at gmain.c line 3299
  • #32 gtk_main
    at gtkmain.c line 1358
  • #33 g_application_run
    at gapplication.c line 1322
  • #34 main
    at nautilus-main.c line 102

Comment 1 Matthias Clasen 2011-08-29 02:47:13 UTC
The following fix has been pushed:
6d797d5 GtkAppChooser: Deal with 'no app found' gracefully
Comment 2 Matthias Clasen 2011-08-29 02:47:17 UTC
Created attachment 195033 [details] [review]
GtkAppChooser: Deal with 'no app found' gracefully

Several functions inside GtkAppChooserDialog were not handling
the situation that app_info might be NULL after the user clicked
'Select'.